# data-analysis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
3thrd/gumbo-parser/: gumbo-parser.cmake
3thrd/gumbo-query/: gumbo-query.cmake
app/: CMakeLists.txt  daemon.cc  daemon.h  html-parser.cmake  main.cpp
app/lib/: web-view.cc  web-view.h
app/spider/: east-money.cc  east-money.h  spider-manager.cc  spider-manager.h  spider.cmake
data/: 上证指数历史数据.csv  创业板指数历史数据.csv  沪深300指数历史数据.csv  深证成份指数历史数据.csv
example/: CMakeLists.txt  find-links.cc  get-title.c
tools/: 上证历史平均.py
